change rows from flex to grid to fix column alignment

--- a/app/assets/stylesheets/components/board/group.scss
+++ b/app/assets/stylesheets/components/board/group.scss
@@ -3,9 +3,13 @@
 
 }
 .group-header {
-    display: flex;
-    justify-content: flex-start;
+    // display: flex;
+    // justify-content: flex-start;
     // justify-content: space-around;
+    display: grid;
+    grid-template-columns: 20px 400px 1fr;
+    grid-auto-columns: 100px;
+    grid-auto-flow: column;
 }
 
 .group-name {
