--- a/app/assets/stylesheets/components/board/item.scss
+++ b/app/assets/stylesheets/components/board/item.scss
@@ -1,15 +1,16 @@
 .item-row {
     // flex-grow: 2;
-    display: flex;
-    justify-content: flex-start;
+    // display: flex;
+    // justify-content: flex-start;
     justify-content: space-around;
     cursor: pointer;
     &:hover {
         background-color: $login-grey;
     }
-    // display: grid;
-    // grid-auto-columns: 1fr;
-    // grid-auto-flow: column;
+    display: grid;
+    grid-template-columns: 20px 400px 1fr;
+    grid-auto-columns: 100px;
+    grid-auto-flow: column;
 }
 
 .item-name {
